# treasury-label-verifier

./: .gitignore  Dockerfile  README.md  SUBMISSION_HANDOFF.md  pyproject.toml
docs/: ARCHITECTURE.md  REQUIREMENTS.md
spike/: README.md  SPIKE_REPORT.md  make_labels.py  run_spike.py
src/label_verifier/: aggregate.py  app.py  demo_cases.py  extract.py  models.py  normalize.py  verify.py  warning_data.py
src/label_verifier/demo_assets/: make_demo_assets.py
src/label_verifier/static/: style.css
src/label_verifier/templates/: index.html  result.html
src/label_verifier/verifiers/: __init__.py  alcohol.py  bottler.py  brand.py  class_type.py  country.py  net_contents.py  warning.py
tests/: conftest.py  test_aggregate.py  test_alcohol.py  test_app.py  test_bottler.py  test_brand.py  test_class_type.py  test_country.py  test_demo_cases_real_ocr.py  test_extract.py  test_models.py  test_net_contents.py  test_normalize.py  test_perf_smoke.py  test_verify.py  test_warning.py
