[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "label-verifier"
version = "0.1.0"
description = "AI-Powered Alcohol Label Verification — TTB take-home prototype"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
